@startuml


skinparam class {
    BackgroundColor #fefece
    BorderColor ac0e3e
    ArrowColor ac0e3e
}
skinparam linetype polyline

entity user {
* id : varchar <<PK>>
--
* email : varchar
* password : varchar
* role : enum(user, artist, admin)
}

entity artist_detail {
* id : varchar <<PK>>
--
* full_name : varchar
* image : varchar
bio : varchar
--
* user_id : varchar <<FK>>
}

entity user_detail {
* id : varchar <<PK>>
--
* full_name : varchar
* image : varchar
--
* user_id : varchar <<FK>>
}

entity album {
* id : varchar <<PK>>
--
* album_title : varchar
* album_image : varchar
* publish_date : date
--
* artist_id : varchar <<FK>>
}

entity song {
* id : varchar <<PK>>
--
* song_title : varchar
* url : varchar
* duration : int
* like_count : int
* status : enum(pending, reject, publish)
* release_date : date
--
* album_id : varchar <<FK>>
}

entity playlist {
* id : int <<PK>>
--
* playlist_name : varchar
--
* user_id : varchar <<FK>>
}

entity trx_playlist {
* id : int <<PK>>
--
* playlist_id : varchar <<FK>>
* song_id : varchar <<FK>>
}

user ||--|| artist_detail
user ||--|| user_detail

user ||--|{ album
album ||--|{ song

playlist ||--|{ trx_playlist
trx_playlist }|--|| song
user ||--|{ playlist
@enduml
